--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-    <meta name="apple-mobile-web-app-title" content="eBird County Rarities" />
-    <title>eBird County Rarities</title>
+    <meta name="apple-mobile-web-app-title" content="Twitcher - find eBird Rarities" />
+    <title>Twitcher - find eBird Rarities</title>
     <link rel="manifest" href="./manifest.webmanifest" />
     <link rel="icon" href="./icons/icon.svg" type="image/svg+xml" />
   </head>
